right in the tsconfig

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +18,10 @@
     "next": "^9.3.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-iframe": "^1.8.0",
-    "react-view-component": "^1.0.1"
+    "react-iframe": "^1.8.0"
+  },
+  "devDependencies": {
+    "@types/node": "^13.9.2",
+    "typescript": "^3.8.3"
   }
 }
